fixes accidental overflow issue

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,7 @@
        url("./fonts/freeserifbolditalic-webfont.woff2") format("woff2");
       
 }
-body header{
-  overflow: hidden;
 
-}
 body{
   overflow: hidden;
   background: #F2F0E9;
